qtdemux: fix: sample description index override in tfhd not evaluated

https://bugzilla.gnome.org/show_bug.cgi?id=778337